Latest changes + Working table See Readme for todo's

--- a/server/.env
+++ b/server/.env
@@ -1,7 +1,7 @@
 DB_HOST=localhost
 DB_USER=root
 DB_PASSWORD=root
-DB_DEFAULT_NAME=db
-DB_BACKUP_NAME=db2
+DB_DEFAULT_NAME=mmsDefault
+DB_BACKUP_NAME=mmsBackup
 PORT=3000
 JWT_KEY="jwt-secret-key"
