--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,7 @@
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.506.0",
+    "luxon": "^3.6.1",
     "react": "^19.0.0",
     "react-day-picker": "8.10.1",
     "react-dom": "^19.0.0",
