--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "luxon": "^3.6.1",
     "multer": "1.4.5-lts.2",
     "mysql2": "^3.14.1",
+    "node-cron": "^4.0.5",
     "nodemon": "^3.1.10",
     "path": "^0.12.7"
   }
