--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon --env-file=.env server.js",
-    "start": "node server.js"
+    "start": "node --env-file=.env server.js"
   },
   "keywords": [],
   "author": "",
